# kwisser

./: .gitignore  README.md  pyproject.toml  today.py
.github/workflows/: build.yaml
src/kwisser/: __init__.py  __main__.py  config.py  formatting.py  github_api.py  loc.py  svg.py
